# spravochnik

./: .dockerignore  .env.local  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  swagger.yaml
alembic/: env.py
alembic/versions/: 3aa112cb25ab_add_organization_tables.py
app/: config.py  database.py
app/auth/: dependencies.py
app/organization/models/: __init__.py  activity.py  building.py  organization.py  phone_number.py
app/organization/repositories/: __init__.py  activity_repository.py  base.py  building_repository.py  organization_repository.py
app/organization/routes/: __init__.py  activity_router.py  building_router.py  organization_router.py
app/organization/schemas/: __init__.py  activity.py  building.py  organization.py  phone_number.py
app/organization/services/: __init__.py  activity_service.py  building_service.py  organization_service.py
tests/organization/repositories/: test_organization_repository.py
